--- a/lab02/templates/playfair.html
+++ b/lab02/templates/playfair.html
@@ -1,30 +1,29 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Caesar Cipher</title>
+    <title>Playfair Cipher</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" rel="stylesheet"/>
 </head>
 <body>
     <div class="container">
         <table class="table">
-            <tr><td style="text-align: center; font-weight: bold; font-size: 25px;">CAESAR CIPHER</td></tr>
+            <tr><td style="text-align: center; font-weight: bold; font-size: 25px;">PLAYFAIR CIPHER</td></tr>
             <tr><td style="font-weight: bold; color: blue">ENCRYPTION</td></tr>
             <tr>
                 <td>
-                    <form method="POST" action="/caesar/encrypt">
+                    <form method="POST" action="/playfair/encrypt">
                         <div class="mb-3">
                             <label class="form-label">Plain text:</label>
-                            <input type="text" class="form-control" name="inputPlainText" placeholder="Input Plain Text" required/>
+                            <input type="text" class="form-control" name="inputPlainText" placeholder="Input Plain Text" required autofocus/>
                         </div>
                         <div class="mb-3">
                             <label class="form-label">Key:</label>
-                            <input type="number" class="form-control" name="inputKeyPlain" placeholder="Input Key" required/>
+                            <input type="text" class="form-control" name="inputKeyPlain" placeholder="Input Key" required/>
                         </div>
                         <button type="submit" class="btn btn-primary">Encrypt</button>
                         <div class="mb-3">
                             <label class="form-label">Cipher Text:</label>
-                            <input type="text" class="form-control" name="outputCipher" placeholder="outputCipher" readonly value="{{outputCipher}} "/>
+                            <input type="text" class="form-control" name="outputCipherText" placeholder="Cipher Text" readonly value="{{outputCipher}}"/>
                         </div>
                     </form>
                 </td>
@@ -33,30 +32,27 @@
             <tr><td style="font-weight: bold; color: blue">DECRYPTION</td></tr>
             <tr>
                 <td>
-                    <form method="POST" action="/caesar/decrypt">
+                    <form method="POST" action="/playfair/decrypt">
                         <div class="mb-3">
                             <label class="form-label">Cipher text:</label>
                             <input type="text" class="form-control" name="inputCipherText" placeholder="Input Cipher Text" required/>
                         </div>
                         <div class="mb-3">
                             <label class="form-label">Key:</label>
-                            <input type="number" class="form-control" name="inputKeyCipher" placeholder="Input Key" required/>
+                            <input type="text" class="form-control" name="inputKeyCipher" placeholder="Input Key" required/>
                         </div>
                         <button type="submit" class="btn btn-success">Decrypt</button>
                         <div class="mb-3">
                             <label class="form-label">Plain Text:</label>
-                            <input type="text" class="form-control" name="outputCipher" placeholder="outputCipher" readonly value="{{outputCipherText}} "/>
+                            <input type="text" class="form-control" name="outputPlainText" placeholder="Plain Text" readonly value="{{outputPlain}}"/>
                         </div>
                     </form>
                 </td>
             </tr>
         </table>
     </div>
-
- <div class="text-center mb-3">
+    <div class="text-center mb-3">
     <a href="{{ url_for('index') }}" class="btn btn-secondary">Back</a>
 </div>
-
-
   </body>
 </html>
